css/apporder.css
#appsorter {
	margin-top: 10px;
	width: 100%;
	max-width: 320px;
}
#appsorter li {
	margin-bottom: 2px;
	display: flex;
}

#appsorter img {
	width: 20px;
	height: 20px;
	margin: 1px;
	margin-right: 10px;
	-webkit-filter: invert(1);
	filter: invert(1);
	filter: progid:DXImageTransform.Microsoft.BasicImage(invert='1');
	opacity: .7;
}

#appsorter .placeholder {
	border: 1px dashed #aaaaaa;
	visibility: visible;
	width: 100%;
	height: 20px;
	margin-bottom: 2px;
	border-radius: 3px;
}

#appsorter li input {
	margin: 0;
	padding: 0;
	width: 14px;
	height: 14px;
	margin-top: -5px;
	margin-right: 10px;
}

#appsorter li p {
	padding: 1px;
}

#appsorterforce {
	margin-bottom: 2px;
        display: flex;
}

#appsorterforce input {
	margin: -5px 5px 0px 5px;
	padding: 0;
	width: 14px;
	height: 14px;
}

